# FlexiSyncMVD

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app_config.py  demo.py  docker-compose.prod.yaml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run_experiment.py  server.py
FlexiSyncMVD/: .gitignore  main.py
FlexiSyncMVD/_test/: Marcille_All_UVs_glb_json_data.json  _test_glb_writter.py  test_glb_mesh_load.py  test_obj_mesh_data_split.py  test_obj_mesh_vt_split.py  test_sd15_controlnet.py  test_sdxl.py  test_sdxl_controlnet.py  test_sdxl_controlnet_canny.py  test_sdxl_controlnet_civitai.py  test_sdxl_controlnet_tile.py  test_sdxl_refiner.py
FlexiSyncMVD/data/cammy/: config_sd1.5.yaml  config_sd1.5_ip.yaml  config_sdxl.yaml  config_sdxl_anime.yaml  config_sdxl_ip.yaml  config_sdxl_ip_realistic.yaml  config_sdxl_tile.yaml
FlexiSyncMVD/data/flying_car/: config.yaml  free_merc_hovercar_normalized.glb
FlexiSyncMVD/data/gate/: config_sdxl_realistic.yaml
FlexiSyncMVD/data/lamp/: config_sdxl_realistic.yaml  lamp.glb
FlexiSyncMVD/data/marcille/: M_textured_S2.mtl  M_textured_S3.mtl  Marcille_all_UVs.mtl  Marcille_all_UVs_no_color.mtl  Marcille_no_color.mtl  config_sdxl_anime.yaml  config_sdxl_ip_anime.yaml  config_sdxl_test_stretched.yaml
FlexiSyncMVD/data/monster/: config.yaml
FlexiSyncMVD/src/: configs.py  mesh_processor.py  pipeline.py  pipeline_XL.py  utils.py
FlexiSyncMVD/src/renderer/: project.py  shader.py
_test/: test_sd15_controlnet_canny.py  test_sdxl_controlnet.py  test_sdxl_controlnet_2.py  test_sdxl_controlnet_canny.py
ci/: conda.Dockerfile  init.sh
data/cammy/: config.yaml
data/flying_car/: config.yaml
data/flying_car/MVD_16Oct2024-190856/: config.yaml
data/monster/: config.yaml
server_demo/: README.md
server_demo/src/: context_data.py  custom_types.py  logger.py  model.py  utils.py
sortium/: README.md
sortium/src/: logger.py  model.py  settings.py  utils.py
src/: configs.py  pipeline.py  pipeline_XL.py
src/renderer/: project.py  shader.py
validation/: api_testing.ipynb
(+25 files in other folders)
