[project]
name = "flexisyncmvd"
version = "0.1.0"
description = "Texture Pipeline built on top of FlexiSyncMVD"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "setuptools>=75.6.0",
    "wheel>=0.45.1",
    "accelerate>=1.1.1",
    "boto3>=1.35.72",
    "clip",
    "configargparse>=1.7",
    "cupy-cuda12x>=13.3.0",
    "diffusers>=0.31.0",
    "einops>=0.8.0",
    "fastapi[standard]>=0.115.5",
    "huggingface-hub>=0.26.3",
    "imageio>=2.36.1",
    "imageio-ffmpeg>=0.5.1",
    "iopath>=0.1.10",
    "ipython>=8.30.0",
    "numpy>=2.1.3",
    "opencv-python>=4.10.0.84",
    "pydantic>=2.10.2",
    "pydantic-settings>=2.6.1",
    "safetensors>=0.4.5",
    "torch==2.4.1",
    "torchvision==0.19.1",
    "transformers>=4.46.3",
    "trimesh>=4.5.3",
    "xatlas>=0.0.9",
    "xformers==0.0.28.post1",
    "ninja>=1.11.1.2",
    "sentry-sdk[fastapi]>=2.19.1",
    "gradio>=5.8.0",
    "python-multipart>=0.0.19",
]

[tool.uv.sources]
clip = { git = "https://github.com/openai/CLIP.git" }
torch = [
	{ index = "pytorch-cu121", marker = "platform_system != 'Darwin'" }
]
torchvision = [
	{ index = "pytorch-cu121", marker = "platform_system != 'Darwin'" }
]
xformers = [
	{ index = "pytorch-cu121", marker = "platform_system != 'Darwin'" }
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
	"data",
	"hfcache",
	"SyncTweedies"
]

include = [
	"server_demo/**/*.py",
	"server.py",
	"demo.py"
]

target-version = "py311"

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "ipykernel>=6.29.5",
]
